// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons / Backgrounds Overridden 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c7=""
    ng-reflect-text="This one should have different"
  >
    <button
      _ngcontent-a-c7=""
    >
      This one should have different backgrounds
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons / Backgrounds With Component 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c5=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c5=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Addons / Backgrounds With Template 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c6=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c6=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
